Finished writing the questions for homework 1

--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -24,17 +24,61 @@
     "    f) $f(n) = 2^{n}$ $g(n) = 2^{2^{n}}$  \n",
     "    g) $f(n) = 2^{n}$ $g(n) = n!$  \n",
     "    h) $f(n) = n * log_2(n)$ $g(n) = n\\sqrt{n}$\n",
-    "    \n"
+    "    \n",
+    "5) Design an algorithm that given a list of n numbers, returns the largest and smallest numbers in the list.  How many comparisons does your algorithm do in the worst case?  Instead of asymptotic behavior suppose we are concerned about the coefficients of the running time, can you design an algorithm that performs at most 1.5n comparisons?  Demonstrate the execution of the algorithm with the input A= [9, 3, 5, 10, 1, 7, 12 ].\n",
+    "\n",
+    "6) Let f1 and f2 be asymptotically positive functions. Prove or disprove each of the following\n",
+    "conjectures. To disprove give a counter example.\n",
+    "\n",
+    "a) If $f_1(n) = O(g_1(n))$ and $f_2(n) = O(g_2(n))$ then $f_1(n) + f_2(n) = O(g_1(n) + g_2(n))$   \n",
+    "b) If $f_1(n) = O(g_1(n))$ and $f_2(n) = O(g_2(n))$ then $\\frac{f_1(n)}{f_2(n)} = O(\\frac{g_1(n)}{g_2(n)})$  \n",
+    "\n",
+    "7) **Fibonacci Numbers:**\n",
+    "\n",
+    "The Fibonacci sequence is given by: 0, 1, 1, 2, 3, 5, 8, 13, 21, ... By definition the Fibonacci sequence starts at 0 and 1 and each subsequent number is the sum of the previous two. In mathematical terms, the sequence $F_n$ of Fibonacci numbers is defined by the recurrence relation\n",
+    "\n",
+    "$F_n = F_{n - 1} + F_{n - 2} $ with $F_{0} = 0$ and $F_{1} = 1$\n",
+    "\n",
+    "An algorithm for calculating the $n^{th}$ Fibonacci number can be implemented either recursively or iteratively.\n",
+    "\n",
+    "**Example Recursive:**  \n",
+    "<code>\n",
+    "fib (n) {\n",
+    "    if (n = 0) {\n",
+    "        return 0;\n",
+    "    } else if (n = 1) {\n",
+    "        return 1;\n",
+    "    } else {\n",
+    "        return fib(n-1) + fib(n-2);\n",
+    "    }\n",
+    "}\n",
+    "</code>\n",
+    "\n",
+    "**Example Iterative:**  \n",
+    "<code>\n",
+    "fib (n) {\n",
+    "    fib = 0;\n",
+    "    a = 1;\n",
+    "    t = 0;\n",
+    "    for (k = 1 to n) {\n",
+    "        t = fib + a;\n",
+    "        a = fib;\n",
+    "        fib = t;\n",
+    "    }\n",
+    "    return fib;\n",
+    "}\n",
+    "</code>\n",
+    "\n",
+    "a)  Implement both recursive and iterative algorithms to calculate Fibonacci Numbers in the\n",
+    "programming language of your choice.   Provide a copy of your code with your HW pdf.  We will not be executing the code for this assignment.   You are not required to use the flip server for this assignment.\n",
+    "\n",
+    "\n",
+    "b) Use the system clock to record the running times of each algorithm for n = 5, 10, 15, 20, 30, 50, 100, 1000, 2000, 5000, 10,000, ….  You may need to modify the values of n if an algorithm runs too fast or too slow to collect the running time data.  If you program in C your algorithm will run faster than if you use python.   The goal of this exercise is to collect run time data.  You will have to adjust the values of n so that you get times greater than 0.\n",
+    "\n",
+    "c) Plot the running time data you collected on graphs with n on the x-axis and time on the y-axis.     You may use Excel,  Matlab, R or any other software.\n",
+    "\n",
+    "d) What type of function (curve) best fits each data set?  Again you can use Excel, Matlab, any software or a graphing calculator to calculate the regression curve.  Give the equation of the function that best “fits” the data and draw that curve on the data plot.    Why is there a difference in running times?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
