--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Name: Alex Miranda\n",
-    "Date: September 28, 2016\n",
-    "CS 325 Homework Assignment #1\n",
+    "Name: Alex Miranda  \n",
+    "Date: September 28, 2016  \n",
+    "CS 325 Homework Assignment #1  \n",
     "\n",
     "1) (CLRS) 1.2-2.  Suppose we are comparing implementations of insertion sort and merge sort on the same machine.  For inputs of size n, insertion sort runs in 8n2 steps, while merge sort runs in\n",
     "64nlgn steps.  For which values of n does insertion sort beat merge sort?\n",
@@ -79,6 +79,15 @@
     "\n",
     "d) What type of function (curve) best fits each data set?  Again you can use Excel, Matlab, any software or a graphing calculator to calculate the regression curve.  Give the equation of the function that best “fits” the data and draw that curve on the data plot.    Why is there a difference in running times?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
