Answered question one

--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -8,8 +8,26 @@
     "Date: September 28, 2016  \n",
     "CS 325 Homework Assignment #1  \n",
     "\n",
-    "1) (CLRS) 1.2-2.  Suppose we are comparing implementations of insertion sort and merge sort on the same machine.  For inputs of size n, insertion sort runs in 8n2 steps, while merge sort runs in\n",
-    "64nlgn steps.  For which values of n does insertion sort beat merge sort?\n",
+    "1) (CLRS) 1.2-2.  Suppose we are comparing implementations of insertion sort and merge sort on the same machine.  For inputs of size n, insertion sort runs in $8n^{2}$ steps, while merge sort runs in\n",
+    "$64nlog_{2}(n)$ steps.  For which values of n does insertion sort beat merge sort?\n",
+    "\n",
+    "In order to find the range of n where insertion sort beats merge sort I need to find when the functions are equal to each other, so I set them equal to each other and simplify for n.\n",
+    "\n",
+    "$8n^{2} = 64n * log_{2}(n)$  \n",
+    "$n^{2} = 8n * log_{2}(n)$ *(Divide both sides by 8)*  \n",
+    "$n = 8 * log_{2}(n)$ *(Divide both sides by n)*  \n",
+    "\n",
+    "Now plotting the two expressions to see where they intersect to determine the range of n values:\n",
+    "\n",
+    "(Substituting n for x)  \n",
+    "$y_{1} = x$  \n",
+    "$y_{2} = 8 * log_{2}(x)$  \n",
+    "\n",
+    "<img src=\"img/question_one_plot.png\" height=\"500px\" width=\"500px\"/>\n",
+    "\n",
+    "Based on the graph the values for which insertion sort outperforms merge sort would be when n is greater than 2 and smaller than 43.\n",
+    "\n",
+    "$2 < n < 43$\n",
     "\n",
     "2) (CLRS) Problem 1-1 on pages 14-15. Fill in the given table. Hint: It may be helpful to use a spreadsheet or Wolfram Alpha to find the values.\n",
     "\n",
