--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -31,7 +31,20 @@
     "\n",
     "2) (CLRS) Problem 1-1 on pages 14-15. Fill in the given table. Hint: It may be helpful to use a spreadsheet or Wolfram Alpha to find the values.\n",
     "\n",
+    "Item | 1 second | 1 miniute | 1 hour | 1 day | 1 month | 1 year | 1 century\n",
+    ":----:|----:|----:|----:|----:|----:|----:|----:\n",
+    "![](http://latex.codecogs.com/gif.latex?\\\\lg{n}) | ![](http://latex.codecogs.com/gif.latex?\\\\2^{10^6}})  | ![](http://latex.codecogs.com/gif.latex?\\\\2^{6*10^7}}) | ![](http://latex.codecogs.com/gif.latex?\\\\2^{36*10^8}}) | ![](http://latex.codecogs.com/gif.latex?\\\\2^{864*10^8}}) | ![](http://latex.codecogs.com/gif.latex?\\\\2^{25920*10^8}}) | ![](http://latex.codecogs.com/gif.latex?\\\\2^{315360*10^8}}) | ![](http://latex.codecogs.com/gif.latex?\\\\2^{31556736*10^8}})\n",
+    "![](http://latex.codecogs.com/gif.latex?\\\\ n^{1/2}) | ![](http://latex.codecogs.com/gif.latex?\\\\ 10^{12}) | ![](http://latex.codecogs.com/gif.latex?\\\\ 36*10^{14}) | ![](http://latex.codecogs.com/gif.latex?\\\\ 1296*10^{16}) | ![](http://latex.codecogs.com/gif.latex?\\\\ 746496*10^{16}) | ![](http://latex.codecogs.com/gif.latex?\\\\ 6718464*10^{18}) | ![](http://latex.codecogs.com/gif.latex?\\\\ 994519296*10^{18}) | ![](http://latex.codecogs.com/gif.latex?\\\\ 995827586973696*10^{16}) \n",
+    "![](http://latex.codecogs.com/gif.latex?\\\\ n) | ![](http://latex.codecogs.com/gif.latex?\\\\10^6)  | ![](http://latex.codecogs.com/gif.latex?6*10^7) | ![](http://latex.codecogs.com/gif.latex?36*10^8) | ![](http://latex.codecogs.com/gif.latex?864*10^8) | ![](http://latex.codecogs.com/gif.latex?2592*10^9) | ![](http://latex.codecogs.com/gif.latex?31536*10^9) | ![](http://latex.codecogs.com/gif.latex?31556736*10^8)\n",
+    "![](http://latex.codecogs.com/gif.latex?\\\\ n\\\\lg{n}) | 62746 | 2801417 | 133378058 | 2755147513| 71870856404 | 797633893349 | 68654697441062\n",
+    "![](http://latex.codecogs.com/gif.latex?\\\\ n^2) | 1000 | 7745 | 60000 | 293938 | 1609968 | 5615692 | 56175382\n",
+    "![](http://latex.codecogs.com/gif.latex?\\\\ n^3) | 100 | 391 | 1532 | 4420 | 13736 | 31593 | 146677\n",
+    "![](http://latex.codecogs.com/gif.latex?\\\\ 2^n) | 19 | 25 | 31 | 36 | 41 | 44 | 51\n",
+    "![](http://latex.codecogs.com/gif.latex?\\\\ n!) | 9 | 11 | 12 | 13 | 15 | 16 | 17\n",
+    "\n",
     "3) (CLRS) 2.3-3 on page 39.  Use mathematical induction to show that when n is an exact power of 2, the solution of the recurrence \n",
+    "\n",
+    "\n",
     "\n",
     "4) For each of the following pairs of functions, either f(n) is O(g(n)), f(n) is Ω(g(n)), or f(n) = Θ(g(n)). Determine which relationship is correct and explain.  \n",
     "    a) $f(n) = n^{0.75}$ $g(n) = n^{0.5}$  \n",
