--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -103,6 +103,35 @@
     "a)  Implement both recursive and iterative algorithms to calculate Fibonacci Numbers in the\n",
     "programming language of your choice.   Provide a copy of your code with your HW pdf.  We will not be executing the code for this assignment.   You are not required to use the flip server for this assignment.\n",
     "\n",
+    "Both implementations are in Python 3\n",
+    "\n",
+    "**Recursive implementation:** \n",
+    "\n",
+    "```python\n",
+    "def fib(n):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    elif n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fib(n - 1) + fib(n - 2)\n",
+    "```\n",
+    "\n",
+    "**Iterative implementation:**\n",
+    "\n",
+    "```python\n",
+    "def fib(n):\n",
+    "    cur_term = 0\n",
+    "    next_term = 1\n",
+    "    total = 0\n",
+    "    \n",
+    "    for k in range(0, n):\n",
+    "        total = cur_term + next_term\n",
+    "        next_term = cur_term\n",
+    "        cur_term = total\n",
+    "    \n",
+    "    return total\n",
+    "```\n",
     "\n",
     "b) Use the system clock to record the running times of each algorithm for n = 5, 10, 15, 20, 30, 50, 100, 1000, 2000, 5000, 10,000, ….  You may need to modify the values of n if an algorithm runs too fast or too slow to collect the running time data.  If you program in C your algorithm will run faster than if you use python.   The goal of this exercise is to collect run time data.  You will have to adjust the values of n so that you get times greater than 0.\n",
     "\n",
