Updated the python notebook and the fibonacci code

--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -135,7 +135,15 @@
     "\n",
     "b) Use the system clock to record the running times of each algorithm for n = 5, 10, 15, 20, 30, 50, 100, 1000, 2000, 5000, 10,000, ….  You may need to modify the values of n if an algorithm runs too fast or too slow to collect the running time data.  If you program in C your algorithm will run faster than if you use python.   The goal of this exercise is to collect run time data.  You will have to adjust the values of n so that you get times greater than 0.\n",
     "\n",
-    "c) Plot the running time data you collected on graphs with n on the x-axis and time on the y-axis.     You may use Excel,  Matlab, R or any other software.\n",
+    "The entries in the table are in seconds.\n",
+    "\n",
+    "Function | $5$ | $10$ | $15$ | $20$ | $30$ | $50$ | $100$ | $1000$ | $2000$\n",
+    ":----:|----:|----:|----:|----:|----:|----:|----:|----:|----:\n",
+    "Recursive | \n",
+    "Iterative | \n",
+    "\n",
+    "\n",
+    "c) Plot the running time data you collected on graphs with n on the x-axis and time on the y-axis. You may use Excel,  Matlab, R or any other software.\n",
     "\n",
     "d) What type of function (curve) best fits each data set?  Again you can use Excel, Matlab, any software or a graphing calculator to calculate the regression curve.  Give the equation of the function that best “fits” the data and draw that curve on the data plot.    Why is there a difference in running times?"
    ]
