--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -9,7 +9,7 @@
     "CS 325 Homework Assignment #1  \n",
     "\n",
     "1) (CLRS) 1.2-2.  Suppose we are comparing implementations of insertion sort and merge sort on the same machine.  For inputs of size n, insertion sort runs in $8n^{2}$ steps, while merge sort runs in\n",
-    "$64nlog_{2}(n)$ steps.  For which values of n does insertion sort beat merge sort?\n",
+    "$64n * log_{2}(n)$ steps.  For which values of n does insertion sort beat merge sort?\n",
     "\n",
     "In order to find the range of n where insertion sort beats merge sort I need to find when the functions are equal to each other, so I set them equal to each other and simplify for n.\n",
     "\n",
@@ -57,6 +57,26 @@
     "    h) $f(n) = n * log_2(n)$ $g(n) = n\\sqrt{n}$\n",
     "    \n",
     "5) Design an algorithm that given a list of n numbers, returns the largest and smallest numbers in the list.  How many comparisons does your algorithm do in the worst case?  Instead of asymptotic behavior suppose we are concerned about the coefficients of the running time, can you design an algorithm that performs at most 1.5n comparisons?  Demonstrate the execution of the algorithm with the input A= [9, 3, 5, 10, 1, 7, 12 ].\n",
+    "\n",
+    "```python\n",
+    "def find_min_max(arr):\n",
+    "    ans = {}\n",
+    "    \n",
+    "    for x in arr:\n",
+    "        if 'min' in ans:\n",
+    "            if x < ans['min']:\n",
+    "                ans['min'] = x\n",
+    "        else:\n",
+    "            ans['min'] = x\n",
+    "            \n",
+    "        if 'max' in ans: \n",
+    "            if x > ans['max']:\n",
+    "                ans['max'] = x\n",
+    "        else:\n",
+    "            ans['max'] = x\n",
+    "            \n",
+    "    return ans\n",
+    "```\n",
     "\n",
     "6) Let f1 and f2 be asymptotically positive functions. Prove or disprove each of the following\n",
     "conjectures. To disprove give a counter example.\n",
@@ -108,19 +128,19 @@
     "**Recursive implementation:** \n",
     "\n",
     "```python\n",
-    "def fib(n):\n",
+    "def fib_recur(n):\n",
     "    if n == 0:\n",
     "        return 0\n",
     "    elif n == 1:\n",
     "        return 1\n",
     "    else:\n",
-    "        return fib(n - 1) + fib(n - 2)\n",
+    "        return fib_recur(n - 1) + fib_recur(n - 2)\n",
     "```\n",
     "\n",
     "**Iterative implementation:**\n",
     "\n",
     "```python\n",
-    "def fib(n):\n",
+    "def fib_iter(n):\n",
     "    cur_term = 0\n",
     "    next_term = 1\n",
     "    total = 0\n",
@@ -160,21 +180,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
