Finalized the find min and max code and added more text to that question's answer

--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -58,24 +58,26 @@
     "    \n",
     "5) Design an algorithm that given a list of n numbers, returns the largest and smallest numbers in the list.  How many comparisons does your algorithm do in the worst case?  Instead of asymptotic behavior suppose we are concerned about the coefficients of the running time, can you design an algorithm that performs at most 1.5n comparisons?  Demonstrate the execution of the algorithm with the input A= [9, 3, 5, 10, 1, 7, 12 ].\n",
     "\n",
+    "My original algorithm was doing 2n comparisons in the worst case. The implementation that does at most 1.5n comparisons is below. I assume that the values in the list are within the range of 1 to 100, otherwise I would use Python's built in max and min integer values when initializing the min and max values respectively.\n",
+    "\n",
     "```python\n",
     "def find_min_max(arr):\n",
-    "    ans = {}\n",
+    "    min_val = 101\n",
+    "    max_val = 0\n",
     "    \n",
-    "    for x in arr:\n",
-    "        if 'min' in ans:\n",
-    "            if x < ans['min']:\n",
-    "                ans['min'] = x\n",
+    "    for i in range(0, len(arr) / 2):\n",
+    "        if arr[2 * i] < arr[2 * i + 1]:\n",
+    "            if arr[2 * i] < min_val:\n",
+    "                min_val = arr[2 * i]\n",
+    "            if arr[2 * i + 1] > max_val:\n",
+    "                max_val = arr[2 * i + 1]\n",
     "        else:\n",
-    "            ans['min'] = x\n",
-    "            \n",
-    "        if 'max' in ans: \n",
-    "            if x > ans['max']:\n",
-    "                ans['max'] = x\n",
-    "        else:\n",
-    "            ans['max'] = x\n",
-    "            \n",
-    "    return ans\n",
+    "            if arr[2 * i + 1] < min_val:\n",
+    "                min_val = arr[2 * i + 1]\n",
+    "            if arr[2 * i] > max_val:\n",
+    "                max_val = arr[2 * i]\n",
+    "                \n",
+    "    return {'max': max_val, 'min': min_val}\n",
     "```\n",
     "\n",
     "6) Let f1 and f2 be asymptotically positive functions. Prove or disprove each of the following\n",
