Finalized the answer for question #5

--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -58,25 +58,38 @@
     "    \n",
     "5) Design an algorithm that given a list of n numbers, returns the largest and smallest numbers in the list.  How many comparisons does your algorithm do in the worst case?  Instead of asymptotic behavior suppose we are concerned about the coefficients of the running time, can you design an algorithm that performs at most 1.5n comparisons?  Demonstrate the execution of the algorithm with the input A= [9, 3, 5, 10, 1, 7, 12 ].\n",
     "\n",
-    "My original algorithm was doing 2n comparisons in the worst case. The implementation that does at most 1.5n comparisons is below. I assume that the values in the list are within the range of 1 to 100, otherwise I would use Python's built in max and min integer values when initializing the min and max values respectively.\n",
+    "My original algorithm was doing 2n comparisons in the worst case. The implementation that does at most 1.5n comparisons is below. Because array A has an odd length both the min and max values are initialized as the first term in the array and set the starting index to be 1. Then the iteration through the array compares adjacent values in the array so the first round of iteration does comparison between 3 and 5 which is true for the arr[i] < arr[i + 1] case. Going into that if it then checks if 3 is less than the min_val which is true because min_val is set to 9 at the time. So the min_val is then set to 3. 5 is then compared to max_val which is also 9 at the time but that fails so max_val remains 9 for that iteration. The iterations continue until i reaches the array's length - 1 and then returns an object identifying the min and max values of the passed in array.\n",
     "\n",
     "```python\n",
     "def find_min_max(arr):\n",
-    "    min_val = 101\n",
-    "    max_val = 0\n",
-    "    \n",
-    "    for i in range(0, len(arr) / 2):\n",
-    "        if arr[2 * i] < arr[2 * i + 1]:\n",
-    "            if arr[2 * i] < min_val:\n",
-    "                min_val = arr[2 * i]\n",
-    "            if arr[2 * i + 1] > max_val:\n",
-    "                max_val = arr[2 * i + 1]\n",
+    "    start_index = None\n",
+    "\n",
+    "    if len(arr) % 2 == 0:\n",
+    "      if arr[0] > arr[1]:\n",
+    "        max_val = arr[0]\n",
+    "        min_val = arr[1]\n",
+    "      else:\n",
+    "        max_val = arr[1]\n",
+    "        min_val = arr[0]\n",
+    "      start_index = 2\n",
+    "    else:\n",
+    "      max_val = arr[0]\n",
+    "      min_val = arr[0]\n",
+    "      start_index = 1\n",
+    "\n",
+    "    for i in range(start_index, len(arr) - 1):\n",
+    "\n",
+    "        if arr[i] < arr[i + 1]:\n",
+    "            if arr[i] < min_val:\n",
+    "                min_val = arr[i]\n",
+    "            if arr[i + 1] > max_val:\n",
+    "                max_val = arr[i + 1]\n",
     "        else:\n",
-    "            if arr[2 * i + 1] < min_val:\n",
-    "                min_val = arr[2 * i + 1]\n",
-    "            if arr[2 * i] > max_val:\n",
-    "                max_val = arr[2 * i]\n",
-    "                \n",
+    "            if arr[i + 1] < min_val:\n",
+    "                min_val = arr[i + 1]\n",
+    "            if arr[i] > max_val:\n",
+    "                max_val = arr[i]\n",
+    "\n",
     "    return {'max': max_val, 'min': min_val}\n",
     "```\n",
     "\n",
