--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -19,13 +19,23 @@
     "\n",
     "Now plotting the two expressions to see where they intersect to determine the range of n values:\n",
     "\n",
-    "(Substituting n for x)  \n",
+    "(Substituting n with x)  \n",
     "$y_{1} = x$  \n",
     "$y_{2} = 8 * log_{2}(x)$  \n",
     "\n",
     "<img src=\"img/question_one_plot.png\" height=\"500px\" width=\"500px\"/>\n",
     "\n",
-    "Based on the graph the values for which insertion sort outperforms merge sort would be when n is greater than 2 and smaller than 43.\n",
+    "Based on the graph the values for which insertion sort outperforms merge sort would be when n is around 0 to 5 and when n is around 40 to 45. The values of the two graphs at those values of n are in the table below:\n",
+    "\n",
+    "$f(n)$ | $1$ | $2$ | $3$ | $4$ | $5$ \n",
+    ":----:|----:|----:|----:|----:|----:\n",
+    "$x$ | $1$| $2$ | $3$ | $4$ | $5$\n",
+    "$8 * log_{2}(n)$ | $0$ | $8$ | $12.67970$ | $16$ | $18.57542$\n",
+    "\n",
+    "$f(n)$ | $40$ | $41$ | $42$ | $43$ | $44$\n",
+    ":----:|----:|----:|----:|----:|----:\n",
+    "$x$ | $40$ | $41$ | $42$ | $43$ | $44$\n",
+    "$8 * log_{2}(n)$ | $42.5754$ | $42.8604$ | $43.1385$ | $43.4101$ | $43.6754$\n",
     "\n",
     "$2 < n < 43$\n",
     "\n",
@@ -195,21 +205,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
