Removed some notation from the value tables in question 1

--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -28,14 +28,14 @@
     "Based on the graph the values for which insertion sort outperforms merge sort would be when n is around 0 to 5 and when n is around 40 to 45. The values of the two graphs at those values of n are in the table below:\n",
     "\n",
     "$f(n)$ | $1$ | $2$ | $3$ | $4$ | $5$ \n",
-    ":----:|----:|----:|----:|----:|----:\n",
+    ":--------:|----:|----:|----:|----:|----:\n",
     "$x$ | $1$| $2$ | $3$ | $4$ | $5$\n",
-    "$8 * log_{2}(n)$ | $0$ | $8$ | $12.67970$ | $16$ | $18.57542$\n",
+    "$8log_{2}(n)$ | $0$ | $8$ | $12.67970$ | $16$ | $18.57542$\n",
     "\n",
     "$f(n)$ | $40$ | $41$ | $42$ | $43$ | $44$\n",
-    ":----:|----:|----:|----:|----:|----:\n",
+    ":--------:|----:|----:|----:|----:|----:\n",
     "$x$ | $40$ | $41$ | $42$ | $43$ | $44$\n",
-    "$8 * log_{2}(n)$ | $42.5754$ | $42.8604$ | $43.1385$ | $43.4101$ | $43.6754$\n",
+    "$8log_{2}(n)$ | $42.5754$ | $42.8604$ | $43.1385$ | $43.4101$ | $43.6754$\n",
     "\n",
     "$2 < n < 43$\n",
     "\n",
@@ -205,21 +205,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
