--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -182,10 +182,10 @@
     "\n",
     "The entries in the table are in seconds.\n",
     "\n",
-    "Function | $5$ | $10$ | $15$ | $20$ | $30$ | $50$ | $100$ | $1000$ | $2000$\n",
-    ":----:|----:|----:|----:|----:|----:|----:|----:|----:|----:\n",
-    "Recursive | \n",
-    "Iterative | \n",
+    "Function | $5$ | $10$ | $15$ | $20$ | $30$\n",
+    ":----:|----:|----:|----:|----:|----:\n",
+    "Recursive | $0.000017$ | $0.000086$ | $0.000861$ | $0.008358$ | $0.845506$\n",
+    "Iterative | $0.000014$ | $0.000006$ | $0.000005$ | $0.000005$ | $0.000008$\n",
     "\n",
     "\n",
     "c) Plot the running time data you collected on graphs with n on the x-axis and time on the y-axis. You may use Excel,  Matlab, R or any other software.\n",
