Added question 4 plots and answers, added .DS_Store to .gitignore

--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -37,6 +37,8 @@
     "$x$ | $40$ | $41$ | $42$ | $43$ | $44$\n",
     "$8log_{2}(n)$ | $42.5754$ | $42.8604$ | $43.1385$ | $43.4101$ | $43.6754$\n",
     "\n",
+    "As seen in the table the intersections occur when 1 < n < 2 and when 43 < n < 44 so for the sake of keeping n as a whole number the range will be defined as follows: \n",
+    "\n",
     "$2 < n < 43$\n",
     "\n",
     "2) (CLRS) Problem 1-1 on pages 14-15. Fill in the given table. Hint: It may be helpful to use a spreadsheet or Wolfram Alpha to find the values.\n",
@@ -57,15 +59,89 @@
     "\n",
     "\n",
     "4) For each of the following pairs of functions, either f(n) is O(g(n)), f(n) is Ω(g(n)), or f(n) = Θ(g(n)). Determine which relationship is correct and explain.  \n",
-    "    a) $f(n) = n^{0.75}$ $g(n) = n^{0.5}$  \n",
-    "    b) $f(n) = n$ $g(n) = log_2(n)$  \n",
-    "    c) $f(n) = log(n)$ $g(n) = log_2(n)$  \n",
-    "    d) $f(n) = e^{n}$ $g(n) = 2^{n}$  \n",
-    "    e) $f(n) = 2^{n}$ $g(n) = 2^{n - 1}$  \n",
-    "    f) $f(n) = 2^{n}$ $g(n) = 2^{2^{n}}$  \n",
-    "    g) $f(n) = 2^{n}$ $g(n) = n!$  \n",
-    "    h) $f(n) = n * log_2(n)$ $g(n) = n\\sqrt{n}$\n",
+    "a) $f(n) = n^{0.75}$ $g(n) = n^{0.5}$\n",
     "    \n",
+    "<img src=\"img/question_4_plots/a.png\" height=\"500px\" width=\"500px\"/>\n",
+    "\n",
+    "$f(n) = \\Omega(g(n))$ because:\n",
+    "\n",
+    "* $\\frac{f(n)}{g(n)} = \\frac{n^{0.75}}{n^{0.5}}$\n",
+    "* $\\frac{n^{0.75}}{n^{0.5}} = n^{0.75 - 0.5} = n^{0.25}$\n",
+    "\n",
+    "Taking the limit of $\\frac{f(n)}{g(n)}$ as n approaches infinity the expression also goes to infinity showing that:\n",
+    "\n",
+    "$f(n) = \\Omega(g(n))$\n",
+    "    \n",
+    "b) $f(n) = n$ $g(n) = log_2(n)$  \n",
+    "\n",
+    "<img src=\"img/question_4_plots/b.png\" height=\"500px\" width=\"500px\"/>\n",
+    "\n",
+    "$f(n) = \\Omega(g(n))$ because:\n",
+    "\n",
+    "* $\\frac{f(n)}{g(n)} = \\frac{n}{log_2(n)}$\n",
+    "* $\\frac{n}{log_2(n)} = \\frac{1}{\\frac{1}{n * ln(2)}}$ (L'hopital's Rule)\n",
+    "* $\\frac{1}{\\frac{1}{n * ln(2)}} = n * ln(2)$\n",
+    "\n",
+    "As n approaches infinity so will $n * ln(2)$ proving that:\n",
+    "\n",
+    "$f(n) = \\Omega(g(n))$\n",
+    "   \n",
+    "c) $f(n) = log(n)$ $g(n) = log_2(n)$\n",
+    "\n",
+    "<img src=\"img/question_4_plots/c.png\" height=\"500px\" width=\"500px\"/>\n",
+    "\n",
+    "$f(n) = \\Theta(g(n))$ because:\n",
+    "\n",
+    "* $\\frac{f(n)}{g(n)} = \\frac{log(n)}{log_2(n)}$\n",
+    "* $\\frac{log(n)}{log_2(n)} = \\frac{\\frac{1}{n * ln(10)}{\\frac{1}{n * ln(2)}}$ (L'hopitals Rule)\n",
+    "* $\\frac{\\frac{1}{n * ln(10)}{\\frac{1}{n * ln(2)}} = \\frac{n * ln(2)}{n * ln(10)}$\n",
+    "* $\\frac{n * ln(2)}{n * ln(10)} = \\frac{ln(2)}{ln(10)}$\n",
+    "\n",
+    "Taking the limit of the quotient of the two functions as n approaches infinity shows that the limit approaches a constant value other than zero so it shows that $g(n)$ can bound $f(n)$ above and below for certain constant factors therefore:\n",
+    "\n",
+    "$f(n) = \\Theta(g(n))$\n",
+    "\n",
+    "d) $f(n) = e^{n}$ $g(n) = 2^{n}$\n",
+    "<img src=\"img/question_4_plots/d.png\" height=\"500px\" width=\"500px\"/>\n",
+    "\n",
+    "$f(n) = \\Omega(g(n))$ because:\n",
+    "\n",
+    "* $\\frac{f(n)}{g(n)} = \\frac{e^{n}}{2^{n}}$\n",
+    "* $\\frac{e^{n}}{2^{n}} = \\frac{e^{n}}{n * ln(2)}$ (L'hopital's Rule)\n",
+    "* $\\frac{e^{n}}{n * ln(2)} = \\frac{e^{n}}{ln(2)}$ (L'hopital's Rule)\n",
+    "* $\\frac{1}{ln(2)} * e^{n} = c * e^{n}$\n",
+    "\n",
+    "So we showed that as $n$ approaches infinity $\\frac{f(n)}{g(n)}$ also approaches infinity showing that:\n",
+    "\n",
+    "$f(n) = \\Omega(g(n))$\n",
+    "\n",
+    "e) $f(n) = 2^{n}$ $g(n) = 2^{n - 1}$  \n",
+    "<img src=\"img/question_4_plots/e.png\" height=\"500px\" width=\"500px\"/>\n",
+    "\n",
+    "$f(n) = \\Theta(g(n))$\n",
+    "\n",
+    "The reason this is true is because:\n",
+    "\n",
+    "* $2^{n - 1} = \\frac{1}{2} * 2^{n}$\n",
+    "\n",
+    "This shows that $g(n)$ is $cf(n)$ where $c = \\frac{1}{2}$\n",
+    "\n",
+    "So $g(n)$ can bound $f(n)$ both above and below for certain constant values. An example would be:\n",
+    "\n",
+    "* $c_1 * g(n) \\leq f(n) \\leq c_2 * g(n)$ where $c_1 = 1$ and $c_2 = 4$\n",
+    "* $2^{n - 1} \\leq 2^{n} \\leq 2^{n + 1}$\n",
+    "\n",
+    "f) $f(n) = 2^{n}$ $g(n) = 2^{2^{n}}$  \n",
+    "<img src=\"img/question_4_plots/f.png\" height=\"500px\" width=\"500px\"/>\n",
+    "\n",
+    "\n",
+    "g) $f(n) = 2^{n}$ $g(n) = n!$\n",
+    "<img src=\"img/question_4_plots/g.png\" height=\"500px\" width=\"500px\"/>\n",
+    "h) $f(n) = n * log_2(n)$ $g(n) = n\\sqrt{n}$\n",
+    "<img src=\"img/question_4_plots/h.png\" height=\"500px\" width=\"500px\"/>\n",
+    "\n",
+    "\n",
+    "\n",
     "5) Design an algorithm that given a list of n numbers, returns the largest and smallest numbers in the list.  How many comparisons does your algorithm do in the worst case?  Instead of asymptotic behavior suppose we are concerned about the coefficients of the running time, can you design an algorithm that performs at most 1.5n comparisons?  Demonstrate the execution of the algorithm with the input A= [9, 3, 5, 10, 1, 7, 12 ].\n",
     "\n",
     "My original algorithm was doing 2n comparisons in the worst case. The implementation that does at most 1.5n comparisons is below. Because array A has an odd length both the min and max values are initialized as the first term in the array and set the starting index to be 1. Then the iteration through the array compares adjacent values in the array so the first round of iteration does comparison between 3 and 5 which is true for the arr[i] < arr[i + 1] case. Going into that if it then checks if 3 is less than the min_val which is true because min_val is set to 9 at the time. So the min_val is then set to 3. 5 is then compared to max_val which is also 9 at the time but that fails so max_val remains 9 for that iteration. The iterations continue until i reaches the array's length - 1 and then returns an object identifying the min and max values of the passed in array.\n",
@@ -106,7 +182,23 @@
     "6) Let f1 and f2 be asymptotically positive functions. Prove or disprove each of the following\n",
     "conjectures. To disprove give a counter example.\n",
     "\n",
-    "a) If $f_1(n) = O(g_1(n))$ and $f_2(n) = O(g_2(n))$ then $f_1(n) + f_2(n) = O(g_1(n) + g_2(n))$   \n",
+    "a) If $f_1(n) = O(g_1(n))$ and $f_2(n) = O(g_2(n))$ then $f_1(n) + f_2(n) = O(g_1(n) + g_2(n))$ \n",
+    "\n",
+    "By definition there exists two integers $n_{1}$, $n_{2}$ and two constants $c_{1}$, $c_{2}$ such that $f_1(n) \\leq c_{1}g_{1}(n)$ for $n \\geq n_{1}$ and $f_2(n) \\leq c_{2}g_{2}(n)$ for $n \\geq n_{2}$. \n",
+    "\n",
+    "* $f_1(n) + f_2(n) \\leq c_{1}g_{1}(n) + c_{2}g_{2}(n)$ (Substitution from the definition above)\n",
+    "\n",
+    "Assume that the expression $max(a, b)$ returns the maximum between the pair from now on therefore:\n",
+    "\n",
+    "Suppose there are $c_{0} = 2 max(c_{1}, c_{2})$ and $n_{0} = max(n_{1}, n_{2})$ therefore:\n",
+    "\n",
+    "* $c_{1}g_{1}(n) + c_{2}g_{2}(n) = c_{0}(g_{1}(n) + g_{2}(n)) / 2$ where $n_{0} \\leq n$\n",
+    "* $c_{0}(g_{1}(n) + g_{2}(n)) / 2 = c_{0}max(g_{1}(n), g_{2}(n))$\n",
+    "\n",
+    "Therefore by definition:\n",
+    "\n",
+    "* $f_1(n) + f_2(n) = O(max(g_{1}(n), g_{2}(n))$\n",
+    "\n",
     "b) If $f_1(n) = O(g_1(n))$ and $f_2(n) = O(g_2(n))$ then $\\frac{f_1(n)}{f_2(n)} = O(\\frac{g_1(n)}{g_2(n)})$  \n",
     "\n",
     "7) **Fibonacci Numbers:**\n",
