Added answers to question 4

--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -58,7 +58,10 @@
     "\n",
     "\n",
     "\n",
-    "4) For each of the following pairs of functions, either f(n) is O(g(n)), f(n) is Ω(g(n)), or f(n) = Θ(g(n)). Determine which relationship is correct and explain.  \n",
+    "4) For each of the following pairs of functions, either f(n) is O(g(n)), f(n) is Ω(g(n)), or f(n) = Θ(g(n)). Determine which relationship is correct and explain. \n",
+    "\n",
+    "Will show graphs of each function pair, $f(n)$ are blue and $g(n)$ are green\n",
+    "\n",
     "a) $f(n) = n^{0.75}$ $g(n) = n^{0.5}$\n",
     "    \n",
     "<img src=\"img/question_4_plots/a.png\" height=\"500px\" width=\"500px\"/>\n",
@@ -93,8 +96,8 @@
     "$f(n) = \\Theta(g(n))$ because:\n",
     "\n",
     "* $\\frac{f(n)}{g(n)} = \\frac{log(n)}{log_2(n)}$\n",
-    "* $\\frac{log(n)}{log_2(n)} = \\frac{\\frac{1}{n * ln(10)}{\\frac{1}{n * ln(2)}}$ (L'hopitals Rule)\n",
-    "* $\\frac{\\frac{1}{n * ln(10)}{\\frac{1}{n * ln(2)}} = \\frac{n * ln(2)}{n * ln(10)}$\n",
+    "* $\\frac{log(n)}{log_2(n)} = \\frac{\\frac{1}{n * ln(10)}}{\\frac{1}{n * ln(2)}}$ (L'hopitals Rule)\n",
+    "* $\\frac{\\frac{1}{n * ln(10)}}{\\frac{1}{n * ln(2)}} = \\frac{n * ln(2)}{n * ln(10)}$\n",
     "* $\\frac{n * ln(2)}{n * ln(10)} = \\frac{ln(2)}{ln(10)}$\n",
     "\n",
     "Taking the limit of the quotient of the two functions as n approaches infinity shows that the limit approaches a constant value other than zero so it shows that $g(n)$ can bound $f(n)$ above and below for certain constant factors therefore:\n",
@@ -131,16 +134,36 @@
     "* $c_1 * g(n) \\leq f(n) \\leq c_2 * g(n)$ where $c_1 = 1$ and $c_2 = 4$\n",
     "* $2^{n - 1} \\leq 2^{n} \\leq 2^{n + 1}$\n",
     "\n",
+    "Therefore: \n",
+    "\n",
+    "$f(n) = \\Theta(g(n))$\n",
+    "\n",
     "f) $f(n) = 2^{n}$ $g(n) = 2^{2^{n}}$  \n",
     "<img src=\"img/question_4_plots/f.png\" height=\"500px\" width=\"500px\"/>\n",
     "\n",
     "\n",
+    "\n",
     "g) $f(n) = 2^{n}$ $g(n) = n!$\n",
     "<img src=\"img/question_4_plots/g.png\" height=\"500px\" width=\"500px\"/>\n",
+    "\n",
+    "\n",
+    "\n",
     "h) $f(n) = n * log_2(n)$ $g(n) = n\\sqrt{n}$\n",
     "<img src=\"img/question_4_plots/h.png\" height=\"500px\" width=\"500px\"/>\n",
     "\n",
+    "$f(n) = O(g(n))$\n",
     "\n",
+    "The reason for this is because:\n",
+    "\n",
+    "* $\\frac{f(n)}{g(n)} = \\frac{n * log_2(n)}{n\\sqrt{n}}$\n",
+    "* $\\frac{n * log_2(n)}{n\\sqrt{n}} = \\frac{log_2(n)}{\\sqrt{n}}$ (Divide numerator and denominator by n)\n",
+    "* $\\frac{log_2(n)}{\\sqrt{n}} = \\frac{\\frac{1}{n * ln(2)}}{\\frac{1}{\\sqrt{n}}}$ (L'hopital's Rule)\n",
+    "* $\\frac{\\frac{1}{n * ln(2)}}{\\frac{1}{\\sqrt{n}}} = \\frac{\\sqrt{n}}{n * ln(2)}$ (L'hopital's Rule)\n",
+    "* $\\frac{\\sqrt{n}}{n * ln(2)} = \\frac{1}{2 * ln(2) * \\sqrt{n}}$ (L'hopital's Rule)\n",
+    "\n",
+    "As n approaches infinity $\\frac{f(n)}{g(n)}$ approaches $0$ therefore:\n",
+    "\n",
+    "$f(n) = O(g(n))$\n",
     "\n",
     "5) Design an algorithm that given a list of n numbers, returns the largest and smallest numbers in the list.  How many comparisons does your algorithm do in the worst case?  Instead of asymptotic behavior suppose we are concerned about the coefficients of the running time, can you design an algorithm that performs at most 1.5n comparisons?  Demonstrate the execution of the algorithm with the input A= [9, 3, 5, 10, 1, 7, 12 ].\n",
     "\n",
