--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -56,7 +56,26 @@
     "\n",
     "3) (CLRS) 2.3-3 on page 39.  Use mathematical induction to show that when n is an exact power of 2, the solution of the recurrence \n",
     "\n",
+    "Base step: \n",
     "\n",
+    "* $n = 2$ therefore\n",
+    "* $T(2) = 2$ so that\n",
+    "* $2 * log_{2}(2) = 2$\n",
+    "\n",
+    "Hypothesis step:\n",
+    "\n",
+    "* Assume $T(n) = n * log_{2}(n)$ is true if $n = 2^{k}$ for some integer $k > 0$\n",
+    "\n",
+    "Induction step:\n",
+    "\n",
+    "* If $n = 2^{k + 1}$ then\n",
+    "* $T(2^{k + 1}) = 2T(\\frac{2^{k + 1}}{2}) + 2^{k + 1}$\n",
+    "* $2T(2^{k}) + 2^{k + 1}$\n",
+    "* $2(2^{k} * log_{2}(2^{k})) + 2^{k + 1}$\n",
+    "* $2^{k + 1}((log_{2}(2^{k})) + 1)$\n",
+    "* $2^{k + 1} * log_{2}(2^{k + 1})$\n",
+    "\n",
+    "This proves through induction that $T(n) = n * log_{2}(n)$ when $n$ is an exact power of $2$\n",
     "\n",
     "4) For each of the following pairs of functions, either f(n) is O(g(n)), f(n) is Ω(g(n)), or f(n) = Θ(g(n)). Determine which relationship is correct and explain. \n",
     "\n",
@@ -295,13 +314,17 @@
     "\n",
     "b) Use the system clock to record the running times of each algorithm for n = 5, 10, 15, 20, 30, 50, 100, 1000, 2000, 5000, 10,000, ….  You may need to modify the values of n if an algorithm runs too fast or too slow to collect the running time data.  If you program in C your algorithm will run faster than if you use python.   The goal of this exercise is to collect run time data.  You will have to adjust the values of n so that you get times greater than 0.\n",
     "\n",
-    "The entries in the table are in seconds.\n",
+    "The entries in the table are in milliseconds.\n",
     "\n",
-    "Function | $5$ | $10$ | $15$ | $20$ | $30$\n",
-    ":----:|----:|----:|----:|----:|----:\n",
-    "Recursive | $0.000017$ | $0.000086$ | $0.000861$ | $0.008358$ | $0.845506$\n",
-    "Iterative | $0.000014$ | $0.000006$ | $0.000005$ | $0.000005$ | $0.000008$\n",
+    "Function | $5$ | $6$ | $7$ | $8$ | $9$ | $10$ | $11$ | $12$ | $13$ | $14$ | $15$ | $16$ | $17$ | $18$ | $19$ | $20$\n",
+    ":----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:|----:\n",
+    "Recursive | $0.015$ | $0.015$ | $0.022$ | $0.048$ | $0.056$ | $0.083$ | $0.132$ | $0.209$ | $0.341$ | $0.533$ | $0.818$ | $1.189$ | $1.92$ | $3.087$ | $4.407$ | $6.66$ \n",
+    "Iterative | $0.005$ | $0.004$ | $0.003$ | $0.004$ | $0.004$ | $0.005$ | $0.005$ | $0.005$ | $0.005$ | $0.005$ | $0.006$ | $0.005$ | $0.005$ | $0.005$ | $0.006$ | $0.006$  \n",
     "\n",
+    "Function | $21$ | $22$ | $23$ | $24$ | $25$ | $26$ | $27$ | $28$ | $29$ | $30$\n",
+    ":----:|----:|----:|----:|----:|----:|----:|----:|----:|----:\n",
+    "Recursive | $10.73$ | $17.35$ | $28.34$ | $45.86$ | $75.97$ | $122.9$ | $201.0$ | $322.8$ | $521.5$ | $850.0$\n",
+    "Iterative | $0.005$ | $0.006$ | $0.006$ | $0.005$ | $0.006$ | $0.007$ | $0.007$ | $0.007$ | $0.008$ | $0.007$\n",
     "\n",
     "c) Plot the running time data you collected on graphs with n on the x-axis and time on the y-axis. You may use Excel,  Matlab, R or any other software.\n",
     "\n",
