Added fibonacci scatter plots images and graphing code

--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -328,6 +328,10 @@
     "\n",
     "c) Plot the running time data you collected on graphs with n on the x-axis and time on the y-axis. You may use Excel,  Matlab, R or any other software.\n",
     "\n",
+    "Recursive runtime plot:\n",
+    "\n",
+    "<img src=\"img/fibonacci_plots/recur.png\" height=\"500px\" width=\"500px\"/>\n",
+    "\n",
     "d) What type of function (curve) best fits each data set?  Again you can use Excel, Matlab, any software or a graphing calculator to calculate the regression curve.  Give the equation of the function that best “fits” the data and draw that curve on the data plot.    Why is there a difference in running times?"
    ]
   },
