Renamed iterative fibonacci plot png and added said plot image to the notebook

--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -332,6 +332,10 @@
     "\n",
     "<img src=\"img/fibonacci_plots/recur.png\" height=\"500px\" width=\"500px\"/>\n",
     "\n",
+    "Iterative runtime plot:\n",
+    "\n",
+    "<img src=\"img/fibonacci_plots/iter.png\" height=\"500px\" width=\"500px\"/>\n",
+    "\n",
     "d) What type of function (curve) best fits each data set?  Again you can use Excel, Matlab, any software or a graphing calculator to calculate the regression curve.  Give the equation of the function that best “fits” the data and draw that curve on the data plot.    Why is there a difference in running times?"
    ]
   },
