Corrected a question 4 answer, added recursive fibonacci with fitted curve image, updated the recursive fibonacci plot code

--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -160,12 +160,38 @@
     "f) $f(n) = 2^{n}$ $g(n) = 2^{2^{n}}$  \n",
     "<img src=\"img/question_4_plots/f.png\" height=\"500px\" width=\"500px\"/>\n",
     "\n",
+    "$f(n) = O(g(n))$\n",
     "\n",
+    "The reason for this is because:\n",
+    "\n",
+    "* $\\frac{2^{n}}{2^{2^{n}} = 2^{n - 2^{n}}$ (Property of exponents)\n",
+    "\n",
+    "So as $n$ approaches infinity will $n$ or $2^{n}$ dominate?\n",
+    "\n",
+    "* $\\frac{n}{2^{n}} = \\frac{1}{ln(2)2^{n}}$ (L'hopital's rule)\n",
+    "\n",
+    "So as $n$ approaches infinity the quotient of $\\frac{n}{2^{n}}$ will approach $0$ showing that $2^{n}$ will dominate in the exponent in $2^{n - 2^{n}}$ therefore the value of the exponent will become more and more negative as $n$ grows larger towards infinity thus showing that as $n$ approaches infinity:\n",
+    "\n",
+    "* $2^{n - 2^{n}}$ will go to zero showing that $g(n)$ will be an upper bound of $f(n)$ thus proving:\n",
+    "\n",
+    "$f(n) = O(g(n))$\n",
     "\n",
     "g) $f(n) = 2^{n}$ $g(n) = n!$\n",
     "<img src=\"img/question_4_plots/g.png\" height=\"500px\" width=\"500px\"/>\n",
     "\n",
+    "$f(n) = O(g(n))$\n",
     "\n",
+    "The reason for this is because:\n",
+    "\n",
+    "* $\\frac{f(n)}{g(n)} = \\frac{2^{n}}{n!}$\n",
+    "* $0 \\lt \\frac{2^{n}}{n!} = \\frac{2}{1} * \\frac{2}{2} * \\frac{2}{3} ... \\frac{2}{n}$\n",
+    "* $\\frac{2}{1} * \\frac{2}{2} * \\frac{2}{3} ... \\frac{2}{n} \\leq \\frac{2}{1} * \\frac{2}{2} * \\frac{2}{3} ... \\frac{2}{3}$\n",
+    "* $\\frac{2}{1} * \\frac{2}{2} * \\frac{2}{3} ... \\frac{2}{3} = \\frac{2}{1} * \\frac{2}{2} * (\\frac{2}{3})^{n - 2}$\n",
+    "* $\\frac{2}{1} * \\frac{2}{2} * (\\frac{2}{3})^{n - 2} = 2 * (\\frac{2}{3})^{n - 2}$\n",
+    "\n",
+    "As $n$ approaches infinity $2 * (\\frac{2}{3})^{n - 2}$ approaches $0$ therefore by the squeeze theorem it is shown that $\\frac{2^{n}}{n!}$ also approaches $0$ as $n$ goes to infinity thus showing that:\n",
+    "\n",
+    "$f(n) = O(g(n))$\n",
     "\n",
     "h) $f(n) = n * log_2(n)$ $g(n) = n\\sqrt{n}$\n",
     "<img src=\"img/question_4_plots/h.png\" height=\"500px\" width=\"500px\"/>\n",
@@ -176,9 +202,10 @@
     "\n",
     "* $\\frac{f(n)}{g(n)} = \\frac{n * log_2(n)}{n\\sqrt{n}}$\n",
     "* $\\frac{n * log_2(n)}{n\\sqrt{n}} = \\frac{log_2(n)}{\\sqrt{n}}$ (Divide numerator and denominator by n)\n",
-    "* $\\frac{log_2(n)}{\\sqrt{n}} = \\frac{\\frac{1}{n * ln(2)}}{\\frac{1}{\\sqrt{n}}}$ (L'hopital's Rule)\n",
-    "* $\\frac{\\frac{1}{n * ln(2)}}{\\frac{1}{\\sqrt{n}}} = \\frac{\\sqrt{n}}{n * ln(2)}$ (L'hopital's Rule)\n",
-    "* $\\frac{\\sqrt{n}}{n * ln(2)} = \\frac{1}{2 * ln(2) * \\sqrt{n}}$ (L'hopital's Rule)\n",
+    "* $\\frac{log_2(n)}{\\sqrt{n}} = \\frac{\\frac{1}{n * ln(2)}}{\\frac{1}{2\\sqrt{n}}}$ (L'hopital's Rule)\n",
+    "* $\\frac{\\frac{1}{n * ln(2)}}{\\frac{1}{2\\sqrt{n}}} = \\frac{2\\sqrt{n}}{n * ln(2)}$ (L'hopital's Rule)\n",
+    "* $\\frac{2\\sqrt{n}}{n * ln(2)} = \\frac{2}{2 * ln(2) * \\sqrt{n}}$ (L'hopital's Rule)\n",
+    "* $\\frac{2}{2 * ln(2) * \\sqrt{n}} = \\frac{1}{ln(2)\\sqrt{n}}$ (Eliminanting common terms)\n",
     "\n",
     "As n approaches infinity $\\frac{f(n)}{g(n)}$ approaches $0$ therefore:\n",
     "\n",
@@ -336,7 +363,15 @@
     "\n",
     "<img src=\"img/fibonacci_plots/iter.png\" height=\"500px\" width=\"500px\"/>\n",
     "\n",
-    "d) What type of function (curve) best fits each data set?  Again you can use Excel, Matlab, any software or a graphing calculator to calculate the regression curve.  Give the equation of the function that best “fits” the data and draw that curve on the data plot.    Why is there a difference in running times?\n",
+    "d) What type of function (curve) best fits each data set?  Again you can use Excel, Matlab, any software or a graphing calculator to calculate the regression curve.  Give the equation of the function that best “fits” the data and draw that curve on the data plot. Why is there a difference in running times?\n",
+    "\n",
+    "For the recursive case an exponential curve best fits the runtime data as shown in the plot below:\n",
+    "\n",
+    "<img src=\"img/fibonacci_plots/recur_exp_fit.png\" height=\"500px\" width=\"500px\"/>\n",
+    "\n",
+    "The literal equation is: $y = (4.222 * 10^{-4}) * e^{-0.483x} + 8.37 * 10^{-2}$\n",
+    "\n",
+    "For the iterative case a linear curve best fits the runtime data as shown in the plot below:\n",
     "\n"
    ]
   },
