Added updates to the plotting of the iterative fibonacci, added images of the big iterative plotting with and without fit line

--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -164,7 +164,7 @@
     "\n",
     "The reason for this is because:\n",
     "\n",
-    "* $\\frac{2^{n}}{2^{2^{n}} = 2^{n - 2^{n}}$ (Property of exponents)\n",
+    "* $\\frac{2^{n}}{2^{2^{n}}} = 2^{n - 2^{n}}$ (Property of exponents)\n",
     "\n",
     "So as $n$ approaches infinity will $n$ or $2^{n}$ dominate?\n",
     "\n",
@@ -363,6 +363,10 @@
     "\n",
     "<img src=\"img/fibonacci_plots/iter.png\" height=\"500px\" width=\"500px\"/>\n",
     "\n",
+    "Because the trend isn't that apparent for the iterative case for such a small range of n I created another plot that plots the runtimes for the iterative case from $5$ to $1000$\n",
+    "\n",
+    "<img src=\"img/fibonacci_plots/iter_big.png\" height=\"500px\" width=\"500px\"/>\n",
+    "\n",
     "d) What type of function (curve) best fits each data set?  Again you can use Excel, Matlab, any software or a graphing calculator to calculate the regression curve.  Give the equation of the function that best “fits” the data and draw that curve on the data plot. Why is there a difference in running times?\n",
     "\n",
     "For the recursive case an exponential curve best fits the runtime data as shown in the plot below:\n",
@@ -372,17 +376,15 @@
     "The literal equation is: $y = (4.222 * 10^{-4}) * e^{-0.483x} + 8.37 * 10^{-2}$\n",
     "\n",
     "For the iterative case a linear curve best fits the runtime data as shown in the plot below:\n",
-    "\n"
+    "\n",
+    "<img src=\"img/fibonacci_plots/iter_big_fit.png\" height=\"500px\" width=\"500px\"/>\n",
+    "\n",
+    "The equation for the best fit line is:\n",
+    "\n",
+    "$y = 0.00021384x - 0.00970961$\n",
+    "\n",
+    "The reason for the difference in the running times is because "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
