Finalized a draft of a problem 7 solution

--- a/week1/CS325_Homework_One.ipynb
+++ b/week1/CS325_Homework_One.ipynb
@@ -307,7 +307,7 @@
     "</code>\n",
     "\n",
     "a)  Implement both recursive and iterative algorithms to calculate Fibonacci Numbers in the\n",
-    "programming language of your choice.   Provide a copy of your code with your HW pdf.  We will not be executing the code for this assignment.   You are not required to use the flip server for this assignment.\n",
+    "programming language of your choice. Provide a copy of your code with your HW pdf.  We will not be executing the code for this assignment.   You are not required to use the flip server for this assignment.\n",
     "\n",
     "Both implementations are in Python 3\n",
     "\n",
@@ -383,7 +383,7 @@
     "\n",
     "$y = 0.00021384x - 0.00970961$\n",
     "\n",
-    "The reason for the difference in the running times is because "
+    "The reason for the difference in the running times is because the recursive implementation requires multiple calls to the fibonacci function to obtain the previous values in the sequence this call stack causes the runtime to become exponential. The iterative implementation has a linear runtime because each term in the sequence is only computed once when computing the sum of all of the terms. If the recursive call cached the previous values rather than recomputing them for each function call it's runtime would also be linear (memoization)."
    ]
   }
  ],
